@@ -11,6 +11,26 @@ class InsertUserProject
         $this->database = $database->dbObject;
     }
 
+    public function putUsersOnProjectToProject(int $hostId, string $oldProject, string $newProject)
+    {
+        $sql = "UPDATE
+                    `User_Host_Projects`
+                SET
+                    `UHP_Project` = :newProject
+                WHERE
+                    `UHP_Host_ID` = :hostId
+                AND
+                    `UHP_Project` = :oldProject
+                ";
+        $do = $this->database->prepare($sql);
+        $do->execute([
+            ":newProject"=>$newProject,
+            ":hostId"=>$hostId,
+            ":oldProject"=>$oldProject
+        ]);
+        return $do->rowCount() ? true : false;
+    }
+
     public function insert(int $userId, int $hostId, string $project)
     {
         $sql = "INSERT INTO `User_Host_Projects`(
