@@ -16,6 +16,7 @@ Fixed
         that doesn't match the LXD server_name)
     Dont show deleted backups
     Fix server overview doesnt load properly when system details missing (#262)
+    Deleting last project when on project blocks UI (#261)
 
 Changed
     Used buttons instead of dropdown to change instance state
